--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
         <meta name="description" content="Programador Front-End, Senai.">
         <meta name="keywords" content="HTML, CSS, JavaScript, Senai">
-        <meta name="author" content="lutiara"> 
+        <meta name="author" content="lutiara Camila"> 
         <!--título do texto-->
         <title>Vendas Livres Store</title>
         
@@ -66,8 +66,43 @@
             <h2>Confira Nossos Produtos em Destaque!</h2>
             <div>
                 <div>
-                    <strong>Produto 1</strong>
+                    <strong>meia-listrado</strong>
+                    <img src="images/meia-listrado.jpeg" alt="meia-listrado">
+                    <div>
+                        <span>R$129</span>
+                        <button type="button">Adicionar ao carrinho</button>
+                    </div>
+
+                    <strong>meia-preta</strong>
+                    <img src="images/meia-preto.jpeg" alt="meia-preta">
+                    <div>
+                        <span>R$129</span>
+                        <button type="button">Adicionar ao carrinho</button>
+                    </div>
+
+                    <strong>tenes azul</strong>
+                    <img src="images/tenis-azul.jpeg" alt="tenes azul">
+                    <div>
+                        <span>R$129</span>
+                        <button type="button">Adicionar ao carrinho</button>
+                    </div>
+
+                    <strong>meia-branca</strong>
                     <img src="images/meia-branca.jpeg" alt="meia-branca">
+                    <div>
+                        <span>R$129</span>
+                        <button type="button">Adicionar ao carrinho</button>
+                    </div>
+
+                    <strong>Kit toca</strong>
+                    <img src="images/toca-kit.jpeg" alt="Kit toca">
+                    <div>
+                        <span>R$129</span>
+                        <button type="button">Adicionar ao carrinho</button>
+                    </div>
+
+                    <strong>Toca vermelha</strong>
+                    <img src="images/toca-vermelha.jpeg" alt="Toca vermelha">
                     <div>
                         <span>R$129</span>
                         <button type="button">Adicionar ao carrinho</button>
@@ -77,5 +112,37 @@
 
             </div>
         </main>
+
+        <!--Rodape do site-->
+        <footer>
+
+            <div>
+                <h3>Vendas Livres Store- Lutiara Camila 2024</h3>
+                <ul>
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank">
+                           <img src="images/facebook.svg" alt="Fecebook logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank">
+                           <img src="images/instagram.svg" alt="instagram logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.spotify.com/" target="_blank">
+                           <img src="images/spotify.svg" alt="Spotfy logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/" target="_blank">
+                           <img src="images/youtube.svg" alt="Youtube logo">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </footer>
+
     </body>
 </html>
