--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
         <meta name="description" content="Programador Front-End, Senai.">
         <meta name="keywords" content="HTML, CSS, JavaScript, Senai">
-        <meta name="author" content="lutiara"> 
+        <meta name="author" content="lutiara Camila"> 
         <!--título do texto-->
         <title>Vendas Livres Store</title>
         
@@ -56,5 +56,52 @@
         <main>
 
         </main>
+                <div>
+                    <h2>Sobre</h2>
+                    <img src="images/sobre.png" alt="Sobre">
+                    <p>A Vendas Livres Store é uma loja online exclusiva de tênis, calçados e acessórios que trazem as principais tendências do mundo na moda, através de materiais, detalhes e informações extremamente modernas.<br>
+                        Mais do que comercializar  Calçados, o maior objetivo da loja é entregar peças confortáveis, diferenciadas e, principalmente, com as últimas e mais relevantes informações do mundo da moda.<br>
+                        Para a Vendas Livres Store, a satisfação do cliente é o foco principal. Por isso, contamos uma equipe de atendimento para oferecer uma comunicação dinâmica, respondendo dúvidas da maneira eficiente e se colocando à disposição para quaisquer contratempo.
+                    </p>
+
+                    <img src="images/fazemos.png" alt="Fazemos">
+                    <p>
+                        A Loja trabalha com produção importada, extremamente qualificada e com muita atenção a todos os detalhes.<br> 
+                        O teor de qualidade que cada produto resulta no feedback extremamente positivo que a marca recebe, podendo ser visto através de depoimentos e recomendações dos seus clientes.<br>
+                        O site possui todas as normas de segurança exigidas para que sua compra, além de prática, seja segura!<br>
+                        Em caso de dúvidas, entre em contato com a nossa equipe de atendimento e fique mais tranquilo(a) para efetuar sua compra.<br>
+                        Seja bem-vindo(a) a Vendas Livres Store e surpreenda-se com nossos produtos!
+                    </p>
+                </div>
+         <!--Rodape do site-->
+         <footer>
+
+            <div>
+                <h3>Vendas Livres Store- Lutiara Camila 2024</h3>
+                <ul>
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank">
+                           <img src="images/facebook.svg" alt="Fecebook logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank">
+                           <img src="images/instagram.svg" alt="instagram logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.spotify.com/" target="_blank">
+                           <img src="images/spotify.svg" alt="Spotfy logo">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/" target="_blank">
+                           <img src="images/youtube.svg" alt="Youtube logo">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </footer>
     </body>
 </html>
