--- a/sobre.html
+++ b/sobre.html
@@ -74,27 +74,30 @@
                 </div>
             </main>
          <!--Rodape do site-->
-            <footer>
+            <footer class="main-footer">
 
-                <div>
-                    <h3>Vendas Livres Store- Lutiara Camila 2024</h3>
-                    <ul>
-                        <li>
+                <div class="main-footer-container">
+
+                    <!--titulo nivel 3-->
+                    <h3 class="title-smaller">Vendas Livres Store- Lutiara Camila 2024</h3>
+                    <ul class="list-container">
+                        
+                        <li class="footer-item">
                             <a href="https://www.facebook.com/" target="_blank">
                             <img src="images/facebook.svg" alt="Fecebook logo">
                             </a>
                         </li>
-                        <li>
+                        <li class="footer-item">
                             <a href="https://www.instagram.com/" target="_blank">
                             <img src="images/instagram.svg" alt="instagram logo">
                             </a>
                         </li>
-                        <li>
+                        <li class="footer-item">
                             <a href="https://www.spotify.com/" target="_blank">
                             <img src="images/spotify.svg" alt="Spotfy logo">
                             </a>
                         </li>
-                        <li>
+                        <li class="footer-item">
                             <a href="https://www.youtube.com/" target="_blank">
                             <img src="images/youtube.svg" alt="Youtube logo">
                             </a>
