--- a/loja.html
+++ b/loja.html
@@ -51,7 +51,7 @@
         </header>
 
         <main>
-            <h2>Seja BeM Vindo ao Maior Site de Vendas do Brasil!</h2>
+            <h2>Seja Bem Vindo ao Maior Site de Vendas do Brasil!</h2>
             <h3>Confira nossos produtos em destaque!</h3>
 
         <section>
