--- a/loja.html
+++ b/loja.html
@@ -181,14 +181,14 @@
                 </div>
             </section>
             <br>
-            <section>
+            <section class="container">
                 <h2 class="title-median">Carrinho</h2>
                 <table class="cart-table">
                     <thead><!--cabeçalho da tabela-->
                         <tr>
                             <th class="table-head-item frist-col">Item</th>
-                            <th class="table-head-item frist-col">Preço</th>
-                            <th class="table-head-item frist-col">Quantidade</th>
+                            <th class="table-head-item second-col">Preço</th>
+                            <th class="table-head-item third-col">Quantidade</th>
                         </tr>    
                     </thead>
 
@@ -196,7 +196,7 @@
                        <tr class="cart-product"><!--linha da tabela-->
                             <td class="product-identification"><!--coluna-->
                                 <img class="cart-product-image" src="images/meia-preta.jpeg" alt="meia-preta">
-                                <strong class="cart-product-title">meia-preta</strong>
+                                <strong class="cart-product-title">Meia-preta</strong>
                             </td>
 
                             <td><!--coluna-->
@@ -205,7 +205,7 @@
 
                             <td><!--coluna-->
                                 <input class="product-qnt-input" type="number" value="2" min="0">
-                                <button class="renove-product-button" type="button">Remover</button>
+                                <button class="remove-product-button" type="button">Remover</button>
                             </td>
 
                         </tr>
@@ -214,7 +214,7 @@
 
                             <td><!--coluna-->
                                 <img class="cart-product-image" src="images/toca-kit.jpeg" alt="toca-kit">
-                                <strong class="cart-product-title">toca-kit</strong>
+                                <strong class="cart-product-title">Toca-kit</strong>
                             </td>
 
                             <td><!--coluna-->
@@ -223,7 +223,7 @@
 
                             <td><!--coluna-->
                                 <input class="product-qnt-input" type="number" value="1" min="0">
-                                <button class="renove-product-button" type="button">Remover</button>
+                                <button class="remove-product-button" type="button">Remover</button>
                             </td>
 
                         </tr>
