--- a/loja.html
+++ b/loja.html
@@ -252,13 +252,11 @@
 
         <!--Rodape do Site-->
         <footer class="main-footer">
-            <div class="footer-container"><!--era main-footer-container-->
+            <div class="main-footer-container"><!--editado-->
 
                 <!--Titulo nivel 3-->
                 <h3 class="title-smaller">Vendas Livres Store - Lutiara Camila 2024</h3>               
-                <ul class="footer-container"> <!--boas praticas, o list-container, 
-                    codigo igual ao main-footer-container trocamos o nome para 
-                    footer-container e utilizamos aqui tambem-->
+                <ul class="list-container"> <!--editado-->
 
                     <li class="footer-item">
                         <a href="https://www.facebook.com/" target="_blank">
