--- a/sobre.html
+++ b/sobre.html
@@ -72,11 +72,11 @@
         
             <footer class="main-footer">
 
-                <div class="footer-container">
+                <div class="main-footer-container">
                     <!--Texto de nivel 3-->
                     <h3 class="title-smaller">Vendas Livres Store- Lutiara Camila 2024 </h3>
 
-                    <ul class="footer-container">
+                    <ul class="list-container">
 
                         <li class="footer-item">
                             <a href="https://www.facebook.com/" target="_blank">
